--- a/sliding.html
+++ b/sliding.html
@@ -24,6 +24,7 @@
         display: grid;
         place-content: center;
         font-size: 3rem;
+        transition: transform 0.3s ease-in-out;
     }
    
 
