--- a/sliding.html
+++ b/sliding.html
@@ -12,6 +12,7 @@
         grid-template-columns: repeat(3,200px);
         grid-auto-rows: 200px;
         border: 2px solid green;
+        border-radius: 25px;
         gap: 5px;
         place-content   : center;
         background-color: grey;
@@ -24,6 +25,7 @@
         display: grid;
         place-content: center;
         font-size: 3rem;
+        border-radius: 25px;
         transition: transform 0.3s ease-in-out;
     }
    
