--- a/sliding.html
+++ b/sliding.html
@@ -56,6 +56,9 @@
     <div class="number"></div>
     <div class="number"></div>
     <div class="number"></div>
+    <div class="number"></div>
+    <div class="number"></div>
+    <div class="number"></div>
 </div>
     *
 </body>
