--- a/sliding.html
+++ b/sliding.html
@@ -51,16 +51,15 @@
 </style>
 <body>
 <div class="container"> 
-    <div class="number"></div>
-    <div class="number"></div>
-    <div class="number"></div>
-    <div class="number"></div>
-    <div class="number"></div>
-    <div class="number"></div>
-    <div class="number"></div>
-    <div class="number"></div>
+    <div class="number">4</div>
+    <div class="number">7</div>
+    <div class="number">2</div>
+    <div class="number">8</div>
+    <div class="number">6</div>
+    <div class="number">1</div>
+    <div class="number">3</div>
+    <div class="number">5</div>
 </div>
-    *
 </body>
 <script src="./sliding.js"></script>
 </html>
