--- a/sliding.html
+++ b/sliding.html
@@ -24,7 +24,9 @@
         border: 2px solid blue;
         display: grid;
         place-content: center;
-        font-size: 3rem;
+        font-family: sans-serif;
+        font-size: 3.5em;
+        color: blue;
         border-radius: 25px;
         transition: transform 0.3s ease-in-out;
     }
@@ -47,6 +49,14 @@
         }
         
     }
+
+    body > div:last-of-type{
+        font-size: 2em;
+        width: fit-content;
+        margin: auto;
+        margin-top: 2em;
+        box-sizing: content-box;
+    }
    
 </style>
 <body>
@@ -60,6 +70,7 @@
     <div class="number">3</div>
     <div class="number">5</div>
 </div>
+<div>Number of moves:</div>
 </body>
 <script src="./sliding.js"></script>
 </html>
