--- a/sliding.html
+++ b/sliding.html
@@ -70,7 +70,7 @@
     <div class="number">3</div>
     <div class="number">5</div>
 </div>
-<div>Number of moves:</div>
+<div>Number of moves: <span>0</span></div>
 </body>
 <script src="./sliding.js"></script>
 </html>
