--- a/sliding.html
+++ b/sliding.html
@@ -4,61 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<style>
-    .container{
-        width: fit-content;
-        display: grid;
-        grid-template-columns: repeat(3,200px);
-        grid-auto-rows: 200px;
-        border: 2px solid green;
-        border-radius: 25px;
-        gap: 5px;
-        place-content   : center;
-        background-color: grey;
-        padding: 10px;
-        margin: auto;  
-    }
-
-    div > div{
-        border: 2px solid blue;
-        display: grid;
-        place-content: center;
-        font-family: sans-serif;
-        font-size: 3.5em;
-        color: blue;
-        border-radius: 25px;
-        transition: transform 0.3s ease-in-out;
-    }
-   
-
-    .number{
-        background-color: lightblue;
-    }
-
-    .slider{
-        animation: slide 0.5s ease forwards;
-    }
-
-    @keyframes slide {
-        from{
-            transform: translateX(0px);
-        }
-        to{
-            transform: translateX(200px);
-        }
-        
-    }
-
-    body > div:last-of-type{
-        font-size: 2em;
-        width: fit-content;
-        margin: auto;
-        margin-top: 2em;
-        box-sizing: content-box;
-    }
-   
-</style>
 <body>
 <div class="container"> 
     <div class="number">4</div>
