branch: 3x3 added best score

--- a/sliding.html
+++ b/sliding.html
@@ -18,6 +18,7 @@
     <div class="number">5</div>
 </div>
 <div>Number of moves: <span>0</span></div>
+<div>Best Score: Sergiu with <span>33</span> moves</div>
 </body>
 <script src="./sliding.js"></script>
 </html>
